fix: (features) fix alignment in wide screen

--- a/css/_features.css
+++ b/css/_features.css
@@ -8,6 +8,7 @@
   grid-template-rows: repeat(2, auto);
   row-gap: 10rem;
   background-color: var(--clr-surface);
+  place-items: center;
 }
 
 .features__hero {
